#
# Xin YUAN, 2019, BSD (2)
#

# target

SET_CSL_PATH("${CMAKE_SOURCE_DIR}")

INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/wmc/src"
	)
ADD_DEFINITIONS(${STRING_CXX_FLAGS})

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_PCH_LIST "precomp.cpp")
SET(SRC_LIST "src/main.cpp" "src/ProcessFile.cpp"
	)
ADD_EXECUTABLE(wmc ${SRC_PCH_LIST} ${SRC_LIST})
SET_PCH(wmc "exe" "precomp.h" ${SRC_PCH_LIST} ${SRC_LIST})
SET_TARGET_PROPERTIES(wmc PROPERTIES
	OUTPUT_NAME "wmc"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_C}")
TARGET_LINK_LIBRARIES(wmc ${STRING_CSL_TARGET} ${STRING_LINK_EXTRA_LIBS})

# end
